crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@special_functions.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/special_functions.as
---
ConstantPool "x", "http://ruffle.rs", "window", "url", "target", "_level12", "_level", "message"
Push 123
Call
Push constant0
GetVariable
AsciiToChar
Pop
GetTime
Pop
GetUrl "http://ruffle.rs", ""
GetUrl "http://ruffle.rs", "window"
Push constant1
Push constant2
GetUrl2 false, false, 1
Push "/:$version"
GetVariable
Pop
GotoFrame 122
Play
GotoLabel "123"
Play
Push constant0
GetVariable
GotoFrame2 false, true
GotoFrame 122
Play
GotoLabel "123"
Play
Push constant0
GetVariable
GotoFrame2 false, true
Push constant0
GetVariable
GotoFrame2 false, true
GotoFrame 65535
Play
GotoFrame 0
Play
GotoFrame 1
Play
GotoFrame 0
Play
GotoFrame 122
GotoLabel "123"
Push constant0
GetVariable
GotoFrame2 false, false
GotoFrame 122
GotoLabel "123"
Push constant0
GetVariable
GotoFrame2 false, false
Push constant0
GetVariable
GotoFrame2 false, false
Push constant0
GetVariable
ToInteger
Pop
Push constant0
GetVariable
StringLength
Pop
Push constant3
Push constant4
GetUrl2 false, true, 0
Push constant3
Push constant4
GetUrl2 false, true, 1
GetUrl "url", "_level12"
Push constant3
Push constant5
GetUrl2 false, false, 1
Push constant3
Push constant6
Push constant0
GetVariable
StringAdd
GetUrl2 false, false, 1
Push 123
RandomNumber
Pop
Push constant7
Trace
