crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@trace_hello_world.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: builder
input_file: samples/as2/trace_hello_world.as
---
ConstantPool "Hello World"
Push constant0
Trace
