crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@try_catch.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/try_catch.as
---
ConstantPool " -- try catch finally -- ", "try!", "message", "Hello World!", "catch!", "e", "finally!", " -- try catch -- ", "test", "caught something! ", " -- try catch(MovieClip) finally -- ", "this", " -- try catch(MovieClip) catch(Number) --", "catch something of MovieClip!", "catch something of Number!", "catch anything else!", " -- try finally -- ", "If you see this, it didn't throw! :("
Push constant0
Trace
Try "e" {
Push constant1
Trace
Push constant2, constant3
DefineLocal
Push constant2
GetVariable
Throw
}
Catch {
Push constant4
Trace
Push constant5
GetVariable
Trace
}
Finally {
Push constant6
Trace
}
Push constant7
Trace
Try "e" {
Push constant1
Trace
Push constant8
Throw
}
Catch {
Push constant9, constant5
GetVariable
Add2
Trace
}
Push constant10
Trace
Try register"0" {
Push constant1
Trace
Push constant11
GetVariable
Throw
}
Catch {
Push "MovieClip"
GetVariable
Push register0
CastOp
PushDuplicate
Push null
Equals2
If loc0001
Push "e"
StackSwap
DefineLocal
Push constant9, constant5
GetVariable
Add2
Trace
Jump loc0000
loc0001:Pop
Push register0
Throw
}
Finally {
loc0000:Push constant6
Trace
}
Push constant12
Trace
Try register"0" {
Push constant1
Trace
Push constant11
GetVariable
Throw
}
Catch {
Push "MovieClip"
GetVariable
Push register0
CastOp
PushDuplicate
Push null
Equals2
If loc0003
Push "e"
StackSwap
DefineLocal
Push constant13
Trace
Jump loc0002
loc0003:Pop
Push "Number"
GetVariable
Push register0
CastOp
PushDuplicate
Push null
Equals2
If loc0004
Push "e"
StackSwap
DefineLocal
Push constant14
Trace
Jump loc0002
loc0004:Pop
Push register0, "e"
StackSwap
DefineLocal
Push constant15
Trace
}
loc0002:Push constant16
Trace
Try {
Push constant1
Trace
Push null
Throw
}
Finally {
Push constant6
Trace
}
Push constant17
Trace
