crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__all_samples@typed_variables.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/typed_variables.as
---
ConstantPool "a", "b", "Test message", "data", "valid", "isValid", "age", "name", "i", "arr", "length", "callback", "num", "str", "Hello", "flag", "obj", "numbers", "Array", "strings", "three", "two", "one", "someValue", "123", "numValue", "Number", "strValue", "String", "userData", "scores", "User", "id"
DefineFunction "add", 2, "a", "b" {
Push constant0
GetVariable
Push constant1
GetVariable
Add2
Return
}
Pop
DefineFunction "getMessage", 0 {
Push constant2
Return
}
Pop
DefineFunction "processData", 1, "data" {
Push constant3
GetVariable
Trace
}
Pop
DefineFunction "complexFunc", 3, "name", "age", "isValid" {
Push constant4, constant5
GetVariable
Push constant6, constant6
GetVariable
Push constant7, constant7
GetVariable
Push 3
InitObject
Return
}
Pop
DefineFunction "forEach", 2, "arr", "callback" {
Push constant8, 0
DefineLocal
loc0002:Push constant8
GetVariable
Push constant9
GetVariable
Push constant10
GetMember
Less2
Not
If loc0000
Push constant9
GetVariable
Push constant8
GetVariable
GetMember
Push 1, constant11
CallFunction
Pop
loc0001:Push constant8, constant8
GetVariable
Increment
SetVariable
Jump loc0002
loc0000:
}
Pop
Push constant12, 42
DefineLocal
Push constant13, constant14
DefineLocal
Push constant15, true
DefineLocal
Push constant16, 0
InitObject
DefineLocal
Push constant9, 0
InitArray
DefineLocal
Push constant17, 0, constant18
NewObject
DefineLocal
Push constant19, constant20, constant21, constant22, 3
InitArray
DefineLocal
Push constant23, constant24
DefineLocal
Push constant25, constant23
GetVariable
Push 1, constant26
CallFunction
DefineLocal
Push constant27, 42, 1, constant28
CallFunction
DefineLocal
Push constant29, constant30, constant18, 3, 2, 1, 3
InitArray
StoreRegister 0
SetVariable
Push register0, constant7, constant28, constant31
StoreRegister 0
SetVariable
Push register0, constant32, constant26, 1
StoreRegister 0
SetVariable
Push register0, 3
InitObject
DefineLocal
