crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__fail_samples.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: crates/as2_codegen/fail_samples/trace.as
---
error: Compile error(s)
  ╭▸ trace.as:1:6
  │
1 │ trace();
  │      ━━ Wrong number of parameters; trace requires exactly 1.
2 │ trace("");
3 │ trace(1, 2);
  ╰╴     ━━━━━━ Wrong number of parameters; trace requires exactly 1.
