crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__fail_samples@chr.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: crates/as2_codegen/fail_samples/chr.as
---
error: Compile error(s)
  ╭▸ chr.as:1:1
  │
1 │ chr();
  │ ━━━━━ Wrong number of parameters; chr requires exactly 1.
2 │ chr("a", "b");
  ╰╴━━━━━━━━━━━━━ Wrong number of parameters; chr requires exactly 1.
