crates/as2_codegen/src/snapshots/ruasc_as2_codegen__tests__fail_samples@geturl.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: crates/as2_codegen/fail_samples/geturl.as
---
error: Compile error(s)
  ╭▸ geturl.as:1:1
  │
1 │ getURL();
  │ ━━━━━━━━ Wrong number of parameters; getURL requires between 1 and 3.
2 │ getURL("http://ruffle.rs", "window", "get", "foo");
  │ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Wrong number of parameters; getURL requires between 1 and 3.
3 │ getURL("http://ruffle.rs", "window", x);
  │                                      ━ Method name must be GET or POST.
4 │ getURL("http://ruffle.rs", "window", "foo");
  ╰╴                                     ━━━━━ Method name must be GET or POST.
